Fix some styles on mobile
homepage, about page, footer

--- a/anatomy/static/sass/_global.sass
+++ b/anatomy/static/sass/_global.sass
@@ -67,10 +67,6 @@ div#footer
   padding-top: 50px
   padding-bottom: 90px
   min-height: 60px
-  li a
-    color: rgb(82, 186, 255)
-    padding: 4px 0
-    display: block
 
 #ng-view
   position: relative
