--- a/anatomy/static/sass/_welcome-page.sass
+++ b/anatomy/static/sass/_welcome-page.sass
@@ -207,6 +207,8 @@ img
 @media (max-width: 467px)
   .btn-huge
     width: 97%
+  div#footer
+    text-align: center
 
 @media (min-width: 767px)
   $huge-radius: 9px
@@ -253,8 +255,14 @@ img
   .how-it-works
     h2
       font-size: 2em
+      padding-top: 20px
+      padding-bottom: 10px
     h3
       font-size: 1.3em
+      padding-top: 0px
+    .works-div
+      padding-top: 20px
+      padding-bottom: 20px
   .jumbotron
     padding: 0 0 20px 0
   .beta-alert
